src/grid/Collumn/Collumn.scss
@import '../../styles/variables';

.col {
  display: block;

  @for $i from 1 through $grid-collumns {
    &.size-#{$i} {
      width: percentage($i / $grid-collumns);
    }
  }

  &.align-left {
    align-self: flex-start;
  }

  &.center-left {
    align-self: center;
  }

  &.align-right {
    align-self: end;
  }
}

